2009-02-19  Christian Persch  <chpe@gnome.org>

	* rsvg-base.c: better error messages. Bug #567307 
	
2009-02-19  Thomas Andersen <phomes@gmail.com>

	* rsvg-filter.c:  "const static" should be "static const". Bug #570656 

2009-02-19  Thomas Andersen <phomes@gmail.com>

	* gtk-engine/svg-draw.c: don't use deprecated gdk_pixbuf_unref. Bug #570938
	
2009-02-19  liucougar <liucougar@gmail.com>

	* rsvg-text.c: librsvg can not render text-decoration=underline text. Bug #566365
	* rsvg-cairo-draw.c: ditto
	
2009-02-19  Luis Menina  <liberforce@freeside.fr>

	* *: GNOME Goal: Clean up GLib and GTK+ includes. Bug #563789
	
2009-02-19  Hagen Schink <troja84@gmail.com>

	* rsvg-base.c: Memory leak in rsvg_handle_get_dimensions_sub(). Bug #562546
	
2009-02-19  Robert Staudinger <robert.staudinger@gmail.com>

	* rsvg-file.c: Do not allocate RsvgState in rsvg_new_image(), use the instance that's been
	allocated and set up in the call to _rsvg_node_init(). Bug #557082
	
2009-01-09  Christian Persch  <chpe@gnome.org>

	* doc/rsvg-sections.txt:
	* librsvg.def:
	* rsvg-base.c:
	* rsvg.h: Add function to check whether the SVG document contains an
	element by ID. Bug #567070.

2009-01-06  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* librsvg-features.h.in: Also add feature defines and check macro to
	librsvg-features.h.in. Bug #566701.

2009-01-06  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* librsvg-2.0-uninstalled.pc.in:
	* librsvg-2.0.pc.in: Indicate in the .pc file whether svgz and css
	support is available. Bug #564616.

2008-12-15  Christian Persch  <chpe@gnome.org>

	* rsvg-base.c: (rsvg_handle_get_position_sub): Return TRUE on success.
	Bug #564522.

2008-12-12  Christian Persch  <chpe@gnome.org>

	* librsvg-features.h.in: Add version check macro. Bug #564226.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* doc/rsvg-sections.txt: New API rsvg_handle_get_position_sub(), gets
	the offset of an SVG element.
	* librsvg.def: