@@ -1,3 +1,7 @@
+2009-02-19  Josselin Mouette <joss@malsain.org>
+
+	* rsvg-path.c: Crashes on some architectures because of wrong zero check on doubles. Bug #565371	
+	
 2009-02-19  Christian Persch  <chpe@gnome.org>
 
 	* rsvg-base.c: better error messages. Bug #567307 
